--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,12 @@ body {
     width: 60px;
 }
 
+@media screen and (min-width: 800px) {
+    .header-ping__logo {
+        width: 100px;
+    }
+}
+
 .main-ping {
     max-width: 400px;
     width: 90%;
@@ -62,7 +68,7 @@ body {
 
 @media screen and (min-width: 800px) {
     .main-ping {
-        max-width: 650px;
+        max-width: 800px;
     }
 }
 
@@ -75,7 +81,7 @@ body {
 
 @media screen and (min-width: 800px) {
     .main-ping__title {
-        font-size: 2.5rem;
+        font-size: 2.8rem;
     }
 }
 
